--- a/voluntariado.css
+++ b/voluntariado.css
@@ -121,7 +121,7 @@
   
   .fondo {
     background-color: #28233a;
-    background-image: url(images/voluntariado/15Fondo\ triqui_Mesa.png);
+    background-image: url(./images/voluntariado/15Fondo\ triqui_Mesa.png);
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
